<resources>
    <string name="app_name">BarcodeReader</string>
    <string name="www_marioprieto_com">www.marioprieto.com</string>
    <string name="exit">Exit</string>
    <string name="scanner">Scanner</string>
    <string name="barcode">BARCODE</string>
    <string name="qr">QR</string>
    <string name="scan_barcode_or_qr">SCAN BARCODE OR QR</string>
    <string name="generate_qr">Generate QR</string>
    <string name="save">SAVE</string>
    <string name="textsaved"></string>
    <string name="share">SHARE</string>
    <string name="description">Description:</string>
    <string name="your_product_is">Your product is:</string>
    <string name="code">Code:</string>
    <string name="barcode_code">Barcode_CODE</string>
    <string name="add_description">Add description</string>
    <string name="edit">EDIT</string>
    <string name="barcode_generated">Barcode_Generated</string>
    <string name="stock">Stock:</string>
    <string name="no_product_found">No Product found</string>
    <string name="add">Add</string>
    <string name="go_back">GO BACK</string>
</resources>
